k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-logging-service
  namespace: hotel
  labels:
    app: hotel-logging
spec:
  selector:
    app: hotel-logging
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
