k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotel-logging
  namespace: hotel
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  rules:
    - host: hotel-booking.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hotel-logging-service
                port:
                  name: http
